// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons renders correctly when a funny reaction has been recorded 1`] = `
<div
  className="MuiToggleButtonGroup-root Buttons-buttonGroup-2"
  role="group"
  selected={true}
>
  <button
    aria-pressed={true}
    className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped Buttons-button-1 Mui-selected"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
    value="funny"
  >
    <span
      className="MuiToggleButton-label"
    >
      <h3
        className="MuiTypography-root Buttons-faces-3 MuiTypography-h3"
      >
        <span
          aria-label="That's Funny!"
          role="img"
        >
          😆
        </span>
      </h3>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
  <button
    aria-pressed={false}
    className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped Buttons-button-1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
    value="meh"
  >
    <span
      className="MuiToggleButton-label"
    >
      <h3
        className="MuiTypography-root Buttons-faces-3 MuiTypography-h3"
      >
        <span
          aria-label="Meh..."
          role="img"
        >
          😒
        </span>
      </h3>
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Buttons renders correctly when a meh reaction has been recorded 1`] = `
<div
  className="MuiToggleButtonGroup-root Buttons-buttonGroup-2"
  role="group"
  selected={true}
>
  <button
    aria-pressed={false}
    className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped Buttons-button-1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
    value="funny"
  >
    <span
      className="MuiToggleButton-label"
    >
      <h3
        className="MuiTypography-root Buttons-faces-3 MuiTypography-h3"
      >
        <span
          aria-label="That's Funny!"
          role="img"
        >
          😆
        </span>
      </h3>
    </span>
  </button>
  <button
    aria-pressed={true}
    className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped Buttons-button-1 Mui-selected"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
    value="meh"
  >
    <span
      className="MuiToggleButton-label"
    >
      <h3
        className="MuiTypography-root Buttons-faces-3 MuiTypography-h3"
      >
        <span
          aria-label="Meh..."
          role="img"
        >
          😒
        </span>
      </h3>
    </span>
  </button>
</div>
`;

exports[`Buttons renders correctly when no reaction has been recorded 1`] = `
<div
  className="MuiToggleButtonGroup-root Buttons-buttonGroup-2"
  role="group"
  selected={true}
>
  <button
    aria-pressed={false}
    className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped Buttons-button-1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
    value="funny"
  >
    <span
      className="MuiToggleButton-label"
    >
      <h3
        className="MuiTypography-root Buttons-faces-3 MuiTypography-h3"
      >
        <span
          aria-label="That's Funny!"
          role="img"
        >
          😆
        </span>
      </h3>
    </span>
  </button>
  <button
    aria-pressed={false}
    className="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped Buttons-button-1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
    value="meh"
  >
    <span
      className="MuiToggleButton-label"
    >
      <h3
        className="MuiTypography-root Buttons-faces-3 MuiTypography-h3"
      >
        <span
          aria-label="Meh..."
          role="img"
        >
          😒
        </span>
      </h3>
    </span>
  </button>
</div>
`;
